k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ayan-warsame
  labels:
    name: ayan-warsame
    project: capstone
